[gd_scene load_steps=12 format=3 uid="uid://0tw065y3kk4h"]

[ext_resource type="Texture2D" uid="uid://c8mnyenya13pv" path="res://assets/sprites/levels/forest/forest_log_on_water.png" id="1_22gf6"]
[ext_resource type="Script" path="res://scenes/field_objects/floating_log/floating_log.gd" id="1_dj3t2"]
[ext_resource type="AudioStream" uid="uid://cixmf0l4cr0qq" path="res://assets/audios/water/water_splash_small_item_01.wav" id="3_rd152"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d6lw6"]
size = Vector2(64, 16)

[sub_resource type="Animation" id="Animation_n8jda"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LogSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SprushSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SprushSprite:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_oeiro"]
resource_name = "floating"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LogSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SprushSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SprushSprite:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_88wog"]
_data = {
"RESET": SubResource("Animation_n8jda"),
"floating": SubResource("Animation_oeiro")
}

[sub_resource type="Animation" id="Animation_ahe4h"]
resource_name = "sink"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LogSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 5), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -8), Vector2(0, -3), Vector2(0, -8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LandSE:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_mncnw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LogSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LandSE:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ifu84"]
_data = {
"RESET": SubResource("Animation_mncnw"),
"sink": SubResource("Animation_ahe4h")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_61ug8"]
size = Vector2(64, 4)

[node name="FloatingLog" type="CharacterBody2D"]
collision_layer = 128
collision_mask = 0
script = ExtResource("1_dj3t2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_d6lw6")
one_way_collision = true

[node name="LogSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_22gf6")
hframes = 6
frame = 2

[node name="SprushSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_22gf6")
hframes = 6
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "floating"
libraries = {
"": SubResource("AnimationLibrary_88wog")
}

[node name="LifeTimer" type="Timer" parent="."]
one_shot = true

[node name="SinkAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ifu84")
}

[node name="LandArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LandArea"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_61ug8")
debug_color = Color(0.607843, 0.454902, 0.764706, 0.419608)

[node name="LandSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_rd152")
volume_db = -15.231
pitch_scale = 0.9
bus = &"SE"

[node name="LandMarker" type="Marker2D" parent="."]
position = Vector2(0, -12)

[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
[connection signal="body_entered" from="LandArea" to="." method="_on_land_area_body_entered"]
[connection signal="body_exited" from="LandArea" to="." method="_on_land_area_body_exited"]
